fix: layout issues

--- a/app/styles/landing.css
+++ b/app/styles/landing.css
@@ -38,6 +38,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 100px;
 }
 
 body {
